--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/alxolr/shuffle#readme",
   "dependencies": {
-    "eslint": "^3.19.0"
+    "eslint": "^3.19.0",
+    "mocha": "^3.2.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
